@@ -1,7 +1,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)proto.h	1.7 (gritter) 8/18/05
+ * Sccsid @(#)proto.h	1.8 (gritter) 8/19/05
  */
 
 /* t6.c */
@@ -41,6 +41,7 @@ void caseafm(void);
 void casesupply(void);
 void casetkf(void);
 void casefallback(void);
+void casehidechar(void);
 int mapwc(int, int *);
 /* t10.c */
 void ptinit(void);
